--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,7 @@ button:focus,
 button:focus-visible {
   outline: none;
 }
+
+.bg-hero {
+  background-image: url(../src/assets/images/hero-image.webp);
+}
